@@ -71,7 +71,8 @@ public class TestFaultTolerance {
   protected static MiniDFSCluster dfsCluster;
   
   private static TezClient tezSession = null;
-  
+  private static TezConfiguration tezConf;
+
   @BeforeClass
   public static void setup() throws Exception {
     LOG.info("Starting mini clusters");
@@ -96,7 +97,7 @@ public class TestFaultTolerance {
           .valueOf(new Random().nextInt(100000))));
       TezClientUtils.ensureStagingDirExists(conf, remoteStagingDir);
       
-      TezConfiguration tezConf = new TezConfiguration(miniTezCluster.getConfig());
+      tezConf = new TezConfiguration(miniTezCluster.getConfig());
       tezConf.set(TezConfiguration.TEZ_AM_STAGING_DIR,
           remoteStagingDir.toString());
       tezConf.setBoolean(TezConfiguration.TEZ_AM_NODE_BLACKLISTING_ENABLED, false);
@@ -159,7 +160,40 @@ public class TestFaultTolerance {
       Assert.assertTrue(Joiner.on(":").join(dagStatus.getDiagnostics()).contains(diagnostics));
     }
   }
-  
+
+  @Test (timeout=600000)
+  public void testSessionStopped() throws Exception {
+    Configuration testConf = new Configuration(false);
+
+    testConf.setBoolean(TestProcessor.getVertexConfName(
+        TestProcessor.TEZ_FAILING_PROCESSOR_DO_FAIL, "v1"), true);
+    testConf.set(TestProcessor.getVertexConfName(
+        TestProcessor.TEZ_FAILING_PROCESSOR_FAILING_TASK_INDEX, "v1"), "0");
+    testConf.setInt(TestProcessor.getVertexConfName(
+        TestProcessor.TEZ_FAILING_PROCESSOR_FAILING_UPTO_TASK_ATTEMPT, "v1"), 0);
+
+    // verify value at v2 task1
+    testConf.set(TestProcessor.getVertexConfName(
+        TestProcessor.TEZ_FAILING_PROCESSOR_VERIFY_TASK_INDEX, "v2"), "1");
+
+    testConf.setInt(TestProcessor.getVertexConfName(
+        TestProcessor.TEZ_FAILING_PROCESSOR_VERIFY_VALUE, "v2", 1), 4);
+    DAG dag = SimpleTestDAG.createDAG("testBasicTaskFailure", testConf);
+    tezSession.waitTillReady();
+
+    DAGClient dagClient = tezSession.submitDAG(dag);
+    dagClient.waitForCompletion();
+    // kill the session now
+    tezSession.stop();
+
+    // Check if killing DAG does not throw any exception
+    dagClient.tryKillDAG();
+
+    // restart the session for rest of the tests
+    tezSession = TezClient.create("TestFaultTolerance", tezConf, true);
+    tezSession.start();
+  }
+
   @Test (timeout=60000)
   public void testBasicSuccessScatterGather() throws Exception {
     DAG dag = SimpleTestDAG.createDAG("testBasicSuccessScatterGather", null);
